[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aatika-hakim", email = "aatikahakim90@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "chainlit==1.0.0",
    "numpy==1.24.3",
    "openai==1.3.0",
    "pandas==2.1.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
